V.Next
----------
- [MINOR] Wire ICryptoFactory to Signer/Decryptor/SP800108KeyGen (#1845)
- [MINOR] Add ICryptoFactory to common4j (#1844)
- [MAJOR] Update target Android targetSdk to API 31/ Android 12
- [MINOR] Use Java 11 in Spotbugs Check
- [MAJOR] Use Java 11 to accomodate android sdk 31 tooling. (#1832)
- [PATCH] Swallow unbound service exceptions on disconnect. (#1824)
- [MINOR] Bumped MSAL Broker Protocol Version to 10.0. (#1829)
- [MINOR] Add implementation for clearAll method to BrokerOAuth2TokenCache to clear all the credentials and metadata (#1823)
- [MAJOR] Adding smartcard certificate based authentication (CBA) feature.  (#1814)
- [PATCH] Fix an issue where incorrect authority url is returned after cloud discovery is set. (#1820)
- [PATCH] Add telemetry event for content provider call for getting enrollment id (#1801)
- [MINOR] Move some storage classes from broker to common4j (#1809)
- [MINOR] Add a Multi Type separated store (#1810)
- [MINOR] ESTS Telemetry changes to capture data around FLW and Multiple WPJ (#1799)
- [MINOR] Add an interface to Broker Token Command Parameters (#1826)

Version 6.0.1
----------
- [PATCH] Fix for failing foci scenarios in Broker (#1800)
- [MINOR] Bumped MSAL Broker Protocol version to 9.0, acquireToken/acquireTokenSilent endpoint requires minimum_required_broker_protocol_version of 9.0+ to Send x-ms-PKeyAuth Header to the token endpoint. (#1790)
- [PATCH] Throw UiRequiredException when no token is found (#1795)
- [MINOR] Remove SSLContext From HttpClient signature (#1789)

Version 6.0.0
----------
- [PATCH] Fix msal failing tests due to telemetry context (#1788)
- [MAJOR] Bumped MSAL Broker Protocol version to 8.0, GET_ACCOUNTS endpoint requires minimum_required_broker_protocol_version of 8.0+ to return an account constructed from PRT id token to FOCI apps. (#1771)
- [MAJOR] [Msal] Remove launching logout endpoint in default browser for shared device mode signout flow (#1783)