@@ -1,5 +1,6 @@
 V.Next
 ----------
+- [MINOR] Expose sign() method in PKeyAuth as opposed to the key itself (#1846)
 - [MINOR] Wire ICryptoFactory to Signer/Decryptor/SP800108KeyGen (#1845)
 - [MINOR] Add ICryptoFactory to common4j (#1844)
 - [MAJOR] Update target Android targetSdk to API 31/ Android 12
